# redex

./: .gitignore  Ast.hs  Graphs.hs  LICENSE  Operations.hs  Primitives.hs  README.markdown  Reductions.hs  Rep.hs  Rep2.hs  SimpleSet.hs  Stringy.hs  Typer.hs  lambdashell.cabal  play.hs  redex.cabal
src/: Ast.hs  Ast_fail.hs  Operations.hs  Random.hs  Stringy.hs  play.hs  xx.hs
src/Core/: Ast.hs  Environment.hs  Transmogrify.hs
src/Internal/: Random.hs  SimpleSet.hs
src/Ops/Term/: Vars.hs
src/Ops/Type/: Typer.hs
src/Repr/: Graphs.hs  Stringy.hs  TH.hs
src/Type/: Typer.hs
