Name:                redex
Version:             0.1
Synopsis:            Bits for playing with lambda calculus
Description:         Yet another system for evaluating, typing and visualising
                     lambda calculus. But this one is mine.
Homepage:            https://github.com/pqwy/redex
License:             BSD3
License-file:        LICENSE
Author:              David Kaloper
-- Maintainer:          
Category:            Language

Build-type:          Simple

Cabal-version:       >=1.2

Library
  Hs-source-dirs: src

  Exposed-modules:
    Core.Ast
    Repr.Stringy
    Repr.Graphs
    Type.Typer 
  -- Operations, Reductions, Primitives
  
  Other-modules:       Internal.SimpleSet, Internal.Random

  Build-depends:
      base              >= 4.4
    , containers        >= 0.4
    , template-haskell  >= 2.6
    , syb               >= 0.3.5
    , transformers      >= 0.2
    , monads-fd         >= 0.2
    , parsec            >= 3.1
    , fgl               >= 5.4
    , graphviz          == 2999.12.0.*
